--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -3,5 +3,57 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="60dp"
+        android:hint="Email Address"
+        android:inputType="textEmailAddress"
+        android:id="@+id/email_signup" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signup_name"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="100dp"
+        android:hint="Username"
+        android:ems="10"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pass_input"
+        android:ems="10"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="140dp"
+        android:hint="Password"
+        android:inputType="textPassword" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:ems="10"
+        android:inputType="phone"
+        android:id="@+id/signup_mobile"
+        android:layout_marginLeft="100dp"
+        android:hint="Phone Number"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Submit"
+        android:tooltipText="Submit"
+        android:text="Sign Up"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="40dp" />
+
+    <Button
+        android:id="@+id/signup_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="250dp"
+        android:text="Cancel"/>
 
 </RelativeLayout>
