Forgot Password Activity added

--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -3,5 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Reset Password"
+        android:layout_marginLeft="130dp"
+        android:textSize="22dp" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="90dp"
+        android:hint="Enter Registered Email"
+        android:id="@+id/reset_email"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="100dp"
+        android:id="@+id/reset_conf"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:text="Cancel"
+        android:id="@+id/cancel_btn"
+        android:layout_marginLeft="250dp"/>
 </RelativeLayout>
