--- a/app/src/main/res/layout/fragment_my_blog.xml
+++ b/app/src/main/res/layout/fragment_my_blog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,6 +14,18 @@
         android:textColor="#fff"
         android:textSize="35sp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp" />
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_add_button"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="70dp"
+        />
+
 
 </FrameLayout>
