--- a/app/src/main/res/layout/fragment_my_blog.xml
+++ b/app/src/main/res/layout/fragment_my_blog.xml
@@ -13,8 +13,7 @@
         android:text="@string/hello_blank_fragment"
         android:textColor="#fff"
         android:textSize="35sp"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
