--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent"></color>
 
     <color name="blue">#0F9BF1</color>
+    <color name="lightGrey">#D2D4B7</color>
 </resources>
