--- a/app/src/main/res/layout/activity_newblog.xml
+++ b/app/src/main/res/layout/activity_newblog.xml
@@ -1,53 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/lightGrey">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/new_blog"
-        android:textSize="35sp"
-        android:background="@color/blue" />
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:textSize="40sp"
-        android:hint="@string/enter_title"
-        android:textStyle="bold"
-        />
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/new_blog"
+            android:textSize="35sp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp" />
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:textSize="20sp"
-        android:hint="@string/enter_content"
-        android:textAlignment="textStart"
-        />
+        <EditText
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:hint="@string/enter_title"
+            android:background="@drawable/rounded_border_edit_text"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp" />
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:hint="@string/enter_author"
-        android:textStyle="bold" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"/>
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:hint="@string/enter_tag" />
+        <EditText
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:hint="@string/enter_content"
+            android:textAlignment="textStart"
+            android:layout_marginTop="5dp"
+            android:background="@null"
+            android:layout_marginStart="8dp" />
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_datetime"
-        android:textSize="25sp"
-        />
-
-
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
