--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -15,13 +15,13 @@
         android:id="@+id/navigation_myblogs"
         android:icon="@drawable/ic_myblogs"
         android:title="@string/my_blogs" />
-    <item
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile" />
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings" />
+    <!--<item-->
+        <!--android:id="@+id/navigation_profile"-->
+        <!--android:icon="@drawable/ic_profile"-->
+        <!--android:title="@string/profile" />-->
+    <!--<item-->
+        <!--android:id="@+id/navigation_settings"-->
+        <!--android:icon="@drawable/ic_settings"-->
+        <!--android:title="@string/settings" />-->
 
 </menu>
